# sift

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
openspec/changes/add-incremental-summaries-and-context/: design.md  proposal.md  research.md  tasks.md
prompts/: categorize.txt  digest_summary.txt  update_summary.txt
scripts/: generate_session.py
src/app/: config.py  constants.py  main.py  shared.py
src/app/api/: health.py
src/app/bot/: dispatcher.py  keyboards.py  middleware.py
src/app/bot/handlers/: callbacks.py  commands.py  settings.py
src/app/collectors/: telegram.py
src/app/db/: models.py  session.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 9717c4b8dee6_add_chat_daily_summaries_and_important_.py  a7af7459d5b1_initial_schema.py
src/app/processors/: ai_provider.py  filter_l1.py  pipeline.py
src/app/scheduler/: jobs.py
tests/: test_filter_l1.py  test_notification_grouping.py
