[project]
name = "sift"
version = "0.1.0"
description = "Personal AI hub — sifts signal from noise across your messaging channels"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Telegram
    "telethon>=1.37,<2.0",
    "aiogram>=3.15",
    # AI providers (all OpenAI-compatible except Gemini)
    "openai>=1.60",
    "google-genai>=1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Scheduling
    "apscheduler>=3.10,<4.0",
    # Config
    "pydantic-settings>=2.7",
    # Resilience
    "tenacity>=9.0",
    # Logging
    "structlog>=24.0",
    # HTTP client (for AI providers)
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
